# facai

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
facai/: stock_load.py  stock_plot.py
