[project]
name = ""
version = ""
description = ""
authors = [
    {name = "tianxie", email = "txie@live.cn"},
]
dependencies = [
    "django>=4.0.4",
    "pandas>=1.4.2",
    "pandas-datareader>=0.10.0",
    "matplotlib>=3.5.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
